--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,11 @@ jobs:
         run: python src/python/annotate_sbml_units.py model/euromix.sbml model/euromix.annotations.csv model/euromix.sbml -f
         shell: bash
 
+      - name: Validate SBML
+        id: validate-sbml
+        run: python src/python/validate_sbml.py model/euromix.sbml
+        shell: bash
+
       - name: "Push changes"
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
