Update workflow to use v1 of SBML PBK Workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on: [push, workflow_dispatch]
 
 jobs:
   create-and-annotate-sbml:
-    uses: jwkruisselbrink/sbml-pbk-workflow/.github/workflows/build.yml@main
+    uses: jwkruisselbrink/sbml-pbk-workflow/.github/workflows/build.yml@v1
     with:
       model-name: euromix
     permissions:
