--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 tellurium==2.2.10
 antimony==2.15.0
 sbmlutils==0.9.0
+parameterized>=0.9.0
 python-libsbml==5.20.4
 sbmlnetwork==0.2.2
 sbmlpbkutils @ git+https://github.com/jwkruisselbrink/sbml-pbk-utils.git@v0.22.0
