--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Unit test
+name: Test
 on: [push]
 jobs:
   test:
@@ -16,5 +16,5 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: Run tests
+      - name: Run unit tests
         run: python -m unittest discover -s 'tests/' -p '*_tests.py'
