--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ tellurium==2.2.10
 antimony==2.15.0
 sbmlutils==0.9.0
 parameterized>=0.9.0
-python-libsbml==5.20.4
-sbmlnetwork==0.2.2
+python-libsbml==5.20.5
 sbmlpbkutils @ git+https://github.com/jwkruisselbrink/sbml-pbk-utils.git@v0.22.0
-pandas
-seaborn
+pandas>=2.2.3
+seaborn>=0.13.2
+nbconvert>=7.16.6
+jupyter>=1.1.1
