--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-tellurium==2.2.10
-antimony==2.15.0
-sbmlutils==0.9.0
+tellurium>=2.2.11.1
+antimony>=3.1.0
+sbmlutils>=0.9.0
 parameterized>=0.9.0
-python-libsbml==5.20.5
+python-libsbml>=5.20.5
 sbmlpbkutils @ git+https://github.com/jwkruisselbrink/sbml-pbk-utils.git@v0.32.0
 pandas>=2.2.3
 seaborn>=0.13.2
